# discrab

./: .gitignore  Cargo.toml  LICENSE  README.md  features.md  howto.md
src/codegen/: Cargo.toml
src/codegen/src/: application_command.rs  application_subcommand.rs  application_subgroup.rs  event_handler.rs  lib.rs  type_check.rs
src/lib/: Cargo.toml
src/lib/examples/: basic.rs
src/lib/examples/cmds/: echo.rs  mod.rs  ping.rs  test.rs
src/lib/examples/events/: message.rs  mod.rs
src/lib/src/: lib.rs
src/lib/src/core/: mod.rs  settings.rs
src/lib/src/core/abstraction/: abstraction_traits.rs  bot.rs  commands.rs  context.rs  event_dispatcher.rs  event_handler.rs  interaction_router.rs  mod.rs  observer.rs  option_builder.rs
src/lib/src/core/abstraction/traits/: command.rs  event.rs  mod.rs  registerable.rs
src/lib/src/core/http/: rate_limit_client.rs  request_bucket.rs  request_future.rs  request_queue.rs  request_thread.rs
src/lib/src/core/interactions/: interaction_event.rs  mod.rs  typing.rs
src/lib/src/core/interactions/handler/: gateway.rs  gateway_payload.rs  websocket.rs
src/lib/src/core/interactions/message/: message_object.rs  mod.rs
src/lib/src/discord/: image_formats.rs  mod.rs  permissions.rs  snowflake.rs  teams.rs
src/lib/src/discord/gateway/: activity.rs  mod.rs  presence.rs
src/lib/src/discord/interactions/: application_command.rs  mod.rs
src/lib/src/discord/resources/: application.rs  emoji.rs  guild_scheduled_event.rs  mod.rs  sticker.rs  voice.rs
src/lib/src/discord/resources/channel/: attachment.rs  channel_object.rs  mention.rs  message.rs  message_builder.rs  mod.rs  reaction.rs  typing.rs
src/lib/src/discord/resources/guild/: guild_member.rs  guild_object.rs  mod.rs  (+4 more)
src/lib/src/util/: common.rs  error.rs  logger.rs  macros.rs  mod.rs  requests.rs
(+98 files in other folders)
