[package]
name = "rust-discord-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = "0.13.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
async-std = { version = "1.10", features = ["tokio1"]}
crossbeam-channel = "0.5"
