[package]
name = "discrab_codegen"
description = "proc macros for Discrab (a discord bot wrapper)"
repository = "https://github.com/KolCrooks/discrab"
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.84", features = ["full"]}
quote = "1.0"