[package]
name = "discrab_codegen"
description = "proc macros for Discrab (a discord bot wrapper)"
repository = "https://github.com/KolCrooks/discrab"
license = "MIT"
version = "0.5.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.84", features = ["full"]}
proc-macro2 = "1.0.37"
quote = "1.0"