[package]
name = "discord_rs"
version = "0.1.0"
edition = "2021"


[dependencies]
bitfield = "0.13.2"
bitflags = "1.3.2"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
async-std = { version = "1.10", features = ["tokio1"]}
crossbeam-channel = "0.5"
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
futures-util = "0.3.19"
termcolor = "1.1"
simd-json = "0.4.8"
serde_json = "1.0"
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"] }
url = "2.2.2"
async-trait = "0.1.52"

[dev-dependencies]
dotenv = "0.15.0"

[dependencies.discordrs_codegen]
version = "*"
path = "../codegen"